# cs532

./: .gitignore  README.md
demo/: CMakeLists.txt  seamcarving.cu
doc/: proposal.tex
hw1/: CMakeLists.txt  README.md  a.out  kmeans.c  mpi_kmeans.c
hw1/include/: kmeans.h
hw1/kmeans/: CMakeLists.txt  kmeans.c
hw1/mpi_kmeans/: CMakeLists.txt  mpi_kmeans.c
hw2/: CMakeLists.txt  README.md  download_files.py  genome.cxx
hw3/: CMakeLists.txt  README.md
hw3/heat_diffusion_cpu/: CMakeLists.txt  heat_diffusion_cpu.cxx
hw3/heat_diffusion_cuda/: CMakeLists.txt  heat_diffusion_cuda.cu
hw3/heat_diffusion_opencl/: CMakeLists.txt  heat_diffusion.cu  heat_diffusion_opencl.cl  heat_diffusion_opencl.cxx
hw3/include/: common.hxx
hw3/test/: CMakeLists.txt  test.cxx
hw4/: .~lock.data.ods#  README.md  data.csv  data.numbers  data.ods  report.pages  seamcarving.cu
hw4/demo/: col_removal.cu  seamcarving.cu
