cmake_minimum_required (VERSION 2.6)
project (DISPLAY_IMAGE_CPU)

if (NOT WIN32)
    CHECK_CXX_COMPILER_FLAG("-pthread" COMPILER_PTHREAD)
endif()

if (COMPILER_SUPPORTS_CXX11)
    add_definitions(-DSTD_THREADING)
    if (NOT WIN32)
        set (CMAKE_CXX_FLAGS    "${CMAKE_CXX_FLAGS} -std=c++11")
    endif(NOT WIN32)
elseif (COMPILER_SUPPORTS_CXX0x)
    add_definitions(-DSTD_THREADING)
    if (NOT WIN32)
        set (CMAKE_CXX_FLAGS    "${CMAKE_CXX_FLAGS} -std=c++0x")
    endif(not WIN32)
else()
    message (STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support.
    Skipping multithreading.")
endif()

if (COMPILER_SUPPORTS_CXX11 OR COMPILER_SUPPORTS_CXX0x)
    if (NOT WIN32)
        find_package(Threads REQUIRED)
        set(CUSTOM_LIBRARIES ${CUSTOM_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
    endif()
endif()

add_executable(heat_diffusion_cpu heat_diffusion_cpu.cxx)
target_link_libraries(heat_diffusion_cpu ${CUSTOM_LIBRARIES})
